fix alignment issues

--- a/src/index.css
+++ b/src/index.css
@@ -87,8 +87,15 @@ select {
   font-size: 16px;
 }
 
+.top-wrapper {
+  margin: 0 auto;
+  width: 1200px;
+  display: flex;
+  justify-content: center;
+}
+
 .main-container {
-  width: 90vw;
+  width: fit-content;
   margin-top: 15px;
   display: flex;
   flex-wrap: wrap;
